# seatunnel-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_CN.md  RESTful API V2.openapi.json  docker-compose.yml  pyproject.toml  requirements-dev.txt  run.bat  run.sh
docs/: DEVELOPER_GUIDE.md  QUICK_START.md  USER_GUIDE.md
examples/: simple_job.conf
src/seatunnel_mcp/: __init__.py  __main__.py  cli.py  client.py  schema.py  tools.py
tests/: __init__.py  test_client.py  test_tools.py
tests/integration/: __init__.py  test_api_client.py
